# photo-organizer

./: .env.example  .gitignore  .pylintrc  README.md  package.json  pyrightconfig.json
.github/: copilot-instructions.md
client/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
client/src/: App.tsx  (+2 more)
docs/: architecture.md  product-vision.md  start-local-results.md
infra/: docker-compose.yml
server/: alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 20260323_0001_initial.py  20260323_0002_variant_kind_check.py  20260323_0003_photo_content_hash_unique.py  20260323_0004_scan_errors.py  20260324_0005_scan_error_metadata_and_run_photos.py  20260324_0006_real_photo_evaluation.py  20260325_0007_managed_original_storage.py  20260326_0008_scan_run_diagnostics.py
server/app/: __init__.py  main.py
server/app/api/: router.py
server/app/api/routers/: photos.py  scan_errors.py  scan_runs.py
server/app/core/: config.py
server/app/db/: base.py  models.py  session.py
server/app/models/: photo.py  photo_variant.py  scan_error.py  scan_run.py  scan_run_photo.py
server/app/schemas/: photo.py  scan_error.py  scan_run.py
server/app/services/: __init__.py  discovery_strategy.py  index_reset.py  media_variants.py  photo_classifier.py  photo_scanner.py
server/scripts/: start_e2e_server.py  start_local_server.py
server/tests/: conftest.py  test_photo_classifier.py  test_scan_runs.py  test_start_local_server.py
(+28 files in other folders)
